--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -1,39 +1,15 @@
-.App {
-  text-align: center;
+/* GENERAL APP STYLES */
+
+:root { /*TODO: Define the color palette for the app */
+  --primary-color: #FFFFFF;
+  --primary-color-alt: #FFFFFF;
+  --secondary-color: #FFFFFF;
+  --secondary-color-alt: #FFFFFF;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
-}
-
-.App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-}
-
-.App-link {
-  color: rgb(112, 76, 182);
-}
-
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+/* User notifications (Errors, warnings, success, ... */
+:root {
+  --error-color: #ff5353;
+  --warning-color: #e8d462;
+  --success-color: #a3e05c;
 }
