--- a/webapp/src/css/nav.css
+++ b/webapp/src/css/nav.css
@@ -6,3 +6,11 @@
 .nav_link {
   padding: 0.25em;
 }
+
+#navBar {
+
+    position: sticky;
+    top: 0;
+    z-index: 9999;
+    background-color: #FFFFFF;
+}
